--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ section{
 }
 .box{
     position: relative;
-    margin: 4rem;
+    margin: 4rem 3rem;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -288,6 +288,25 @@ section{
     color: var(--bg-color);
 }
 
+
+@media(max-width: 1680px){
+    .box-image{
+        width: 90px;
+        height: 90px;
+    }
+    .box-image img {
+        width: 100%;
+        height: 100%;
+    }
+    .box h2{
+        font-size: 0.9rem;
+    }
+    .box h3{
+        font-size: 0.7rem;
+        font-weight: 400;
+    }   
+}
+
 @media(max-width: 1560px){
     header{
         padding: 15px 40px ;
@@ -296,7 +315,12 @@ section{
         --big-font:3.5rem;
         --h2-font:2rem;
     }
+    .about-image img{
+        width: 100%;
+        height: 100%;
+    }
 }
+
 @media(max-width: 1140px){
     section{
         padding: 50px 8%;
@@ -305,6 +329,7 @@ section{
         display: initial;
         color: var(--text-color);
     }
+    
     header .navbar{
         position: absolute;
         top: -400px;
@@ -339,16 +364,29 @@ section{
     .about{
         grid-template-columns: 1fr;
         text-align: center;
+        align-items: center;
+        justify-content: center;
     }
     .about-image{
         order: 2;
+        height: 100%;
+        width: 100%;
     }
     section{
         padding: 100px 7%;
+    }
+    .box{
+        margin: 2rem;
     }
 }
 @media(max-width: 575px){
     .col{
         width: 100%;
+    }
+    .box{
+        margin: 1rem;
+    }
+    .cta{
+        width: 90vw;
     }
 }
